# pdf-rag-assistant

./: app.py  pyproject.toml
data/: sample.txt
