[project]
name = "rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
